fix book covers

--- a/src/app/features/products/presentational/product/product.component.scss
+++ b/src/app/features/products/presentational/product/product.component.scss
@@ -35,8 +35,7 @@
     width: 100%;
     height: 70px;
     box-sizing: border-box;
-    padding: 5px 20px;
-    gap: 10px;
+    padding: 10px 20px;
     color: colors.$secondary-color;
     background-color: colors.$secondary-background-color;
     font-size: 12px;
